--- a/DormitoryForDelivery/DormitoryForDelivery/View Controllers/SettingScreenViewControllers/MyInfoTableViewCell.xib
+++ b/DormitoryForDelivery/DormitoryForDelivery/View Controllers/SettingScreenViewControllers/MyInfoTableViewCell.xib
@@ -10,15 +10,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyInfoTableViewCell" rowHeight="130" id="KGk-i7-Jjw" customClass="MyInfoTableViewCell" customModule="DormitoryForDelivery" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="369" height="126"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyInfoTableViewCell" rowHeight="158" id="KGk-i7-Jjw" customClass="MyInfoTableViewCell" customModule="DormitoryForDelivery" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="369" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="369" height="126"/>
+                <rect key="frame" x="0.0" y="0.0" width="369" height="100"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="xeo-Cr-Vda">
-                        <rect key="frame" x="22" y="28" width="330.5" height="71"/>
+                        <rect key="frame" x="20" y="15" width="330.5" height="71"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Y17-89-ejz">
                                 <rect key="frame" x="1" y="0.0" width="329.5" height="21"/>
@@ -87,8 +87,8 @@
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="xeo-Cr-Vda" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="22" id="KIJ-b2-1mp"/>
-                    <constraint firstItem="xeo-Cr-Vda" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="28" id="LDn-0a-ooJ"/>
+                    <constraint firstItem="xeo-Cr-Vda" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="hWn-3I-sOz"/>
+                    <constraint firstItem="xeo-Cr-Vda" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="mmj-85-PEP"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -100,7 +100,7 @@
                 <outlet property="RName" destination="hlc-mo-3NB" id="XTg-XM-nS9"/>
                 <outlet property="RNumber" destination="C5R-DD-oWP" id="fee-Rp-hcB"/>
             </connections>
-            <point key="canvasLocation" x="173.18840579710147" y="81.026785714285708"/>
+            <point key="canvasLocation" x="173.18840579710147" y="90.401785714285708"/>
         </tableViewCell>
     </objects>
 </document>
