--- a/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/HomeScreen.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/HomeScreen.storyboard
@@ -303,7 +303,7 @@
         <scene sceneID="1lF-tx-cac">
             <objects>
                 <tableViewController storyboardIdentifier="PostTableViewController" id="6yC-lX-URx" customClass="PostTableViewController" customModule="DormitoryForDelivery" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" pagingEnabled="YES" dataMode="static" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="P2h-It-ITs">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" pagingEnabled="YES" dataMode="static" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="P2h-It-ITs">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <sections>
@@ -328,7 +328,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이태영" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u0c-DX-G1q" userLabel="InfoLabel">
                                                     <rect key="frame" x="20" y="96" width="69" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
-                                                    <color key="textColor" systemColor="systemGray2Color"/>
+                                                    <color key="textColor" red="0.32549020649999999" green="0.32941177490000001" blue="0.32549020649999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2016011660" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DA0-XO-j08" userLabel="MeetingTimeLabel">
@@ -365,23 +365,89 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="897-2n-pE7">
-                                        <rect key="frame" x="0.0" y="344.5" width="414" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="150" id="897-2n-pE7">
+                                        <rect key="frame" x="0.0" y="344.5" width="414" height="150"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="897-2n-pE7" id="C2z-gy-IKa">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="150"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r8h-Lk-8Iw">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                                    <rect key="frame" x="0.0" y="20" width="414" height="110"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="모집정보" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="REa-1U-sS3">
+                                                            <rect key="frame" x="21" y="8" width="63" height="22"/>
+                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                                            <color key="textColor" red="0.32549020649999999" green="0.32941177490000001" blue="0.32549020649999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="모집인원" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x1K-cN-S8Z">
+                                                            <rect key="frame" x="144" y="8" width="59" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="주문시간" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3fV-J9-aaI">
+                                                            <rect key="frame" x="144" y="37" width="59" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="카테고리" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5a6-Ew-KG6">
+                                                            <rect key="frame" x="144" y="67" width="59" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tb9-U6-0kD">
+                                                            <rect key="frame" x="307" y="8" width="42" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JdQ-hV-Rqv">
+                                                            <rect key="frame" x="307" y="37" width="42" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rju-4b-ljd">
+                                                            <rect key="frame" x="307" y="64" width="42" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                    <constraints>
+                                                        <constraint firstItem="3fV-J9-aaI" firstAttribute="trailing" secondItem="x1K-cN-S8Z" secondAttribute="trailing" id="2sf-3i-U3c"/>
+                                                        <constraint firstAttribute="trailing" secondItem="tb9-U6-0kD" secondAttribute="trailing" constant="65" id="6Nm-JX-qkM"/>
+                                                        <constraint firstItem="JdQ-hV-Rqv" firstAttribute="trailing" secondItem="tb9-U6-0kD" secondAttribute="trailing" id="99z-DL-d7L"/>
+                                                        <constraint firstItem="Rju-4b-ljd" firstAttribute="top" secondItem="JdQ-hV-Rqv" secondAttribute="bottom" constant="6" id="C9u-5w-m84"/>
+                                                        <constraint firstItem="REa-1U-sS3" firstAttribute="top" secondItem="r8h-Lk-8Iw" secondAttribute="top" constant="8" id="EXo-i6-yrZ"/>
+                                                        <constraint firstItem="5a6-Ew-KG6" firstAttribute="trailing" secondItem="3fV-J9-aaI" secondAttribute="trailing" id="QMa-As-eYd"/>
+                                                        <constraint firstAttribute="bottom" secondItem="REa-1U-sS3" secondAttribute="bottom" constant="80" id="RIK-6B-Jll"/>
+                                                        <constraint firstItem="5a6-Ew-KG6" firstAttribute="top" secondItem="3fV-J9-aaI" secondAttribute="bottom" constant="9" id="SRz-0v-Rk7"/>
+                                                        <constraint firstItem="x1K-cN-S8Z" firstAttribute="leading" relation="lessThanOrEqual" secondItem="REa-1U-sS3" secondAttribute="trailing" constant="60" id="T6R-FT-C6c"/>
+                                                        <constraint firstItem="REa-1U-sS3" firstAttribute="leading" secondItem="r8h-Lk-8Iw" secondAttribute="leading" constant="21" id="Z1A-RJ-k1e"/>
+                                                        <constraint firstItem="tb9-U6-0kD" firstAttribute="top" secondItem="r8h-Lk-8Iw" secondAttribute="top" constant="8" id="bia-Zq-QLx"/>
+                                                        <constraint firstItem="Rju-4b-ljd" firstAttribute="trailing" secondItem="JdQ-hV-Rqv" secondAttribute="trailing" id="d5T-0f-P4T"/>
+                                                        <constraint firstAttribute="bottom" secondItem="5a6-Ew-KG6" secondAttribute="bottom" constant="22" id="fGw-GJ-gYo"/>
+                                                        <constraint firstAttribute="bottom" secondItem="Rju-4b-ljd" secondAttribute="bottom" constant="25" id="gO2-rm-PFG"/>
+                                                        <constraint firstItem="3fV-J9-aaI" firstAttribute="top" secondItem="x1K-cN-S8Z" secondAttribute="bottom" constant="8" symbolic="YES" id="hR2-mw-t8I"/>
+                                                        <constraint firstItem="x1K-cN-S8Z" firstAttribute="top" secondItem="r8h-Lk-8Iw" secondAttribute="top" constant="8" id="iYH-iO-F2o"/>
+                                                        <constraint firstItem="tb9-U6-0kD" firstAttribute="leading" secondItem="x1K-cN-S8Z" secondAttribute="trailing" constant="104" id="rmT-jM-nUY"/>
+                                                        <constraint firstItem="JdQ-hV-Rqv" firstAttribute="top" secondItem="tb9-U6-0kD" secondAttribute="bottom" constant="8" symbolic="YES" id="v2O-Hc-0J8"/>
+                                                    </constraints>
                                                 </view>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="r8h-Lk-8Iw" firstAttribute="leading" secondItem="C2z-gy-IKa" secondAttribute="leading" id="4kv-Ud-WHd"/>
+                                                <constraint firstItem="r8h-Lk-8Iw" firstAttribute="top" secondItem="C2z-gy-IKa" secondAttribute="top" constant="20" symbolic="YES" id="50r-a3-1DW"/>
                                                 <constraint firstAttribute="trailing" secondItem="r8h-Lk-8Iw" secondAttribute="trailing" id="HgG-8s-cQq"/>
-                                                <constraint firstItem="r8h-Lk-8Iw" firstAttribute="top" secondItem="C2z-gy-IKa" secondAttribute="top" id="Jpn-Nc-QMH"/>
-                                                <constraint firstAttribute="bottom" secondItem="r8h-Lk-8Iw" secondAttribute="bottom" id="tGm-pY-TpN"/>
+                                                <constraint firstAttribute="bottom" secondItem="r8h-Lk-8Iw" secondAttribute="bottom" constant="20" symbolic="YES" id="Llc-cj-0ER"/>
+                                                <constraint firstItem="r8h-Lk-8Iw" firstAttribute="leading" secondItem="C2z-gy-IKa" secondAttribute="leading" id="Mcy-ku-vpa"/>
+                                                <constraint firstAttribute="trailing" secondItem="r8h-Lk-8Iw" secondAttribute="trailing" id="oVc-9h-uJg"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -390,7 +456,13 @@
                         </sections>
                     </tableView>
                     <connections>
+                        <outlet property="orderTimeLabel" destination="JdQ-hV-Rqv" id="P9A-Im-O5k"/>
+                        <outlet property="postCreatTimeLabel" destination="DA0-XO-j08" id="6Pf-Yi-Qaq"/>
                         <outlet property="postTextView" destination="orC-ao-Ab3" id="zmq-gu-x4n"/>
+                        <outlet property="postWriterNameLabel" destination="u0c-DX-G1q" id="YRj-f9-jgv"/>
+                        <outlet property="recruitInformationView" destination="r8h-Lk-8Iw" id="5n3-37-l2j"/>
+                        <outlet property="recruitMemberNumberLabel" destination="tb9-U6-0kD" id="78T-e3-K6q"/>
+                        <outlet property="titleLabel" destination="1Ox-t6-wur" id="7X4-S5-Jvp"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mby-RL-OkO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -1563,9 +1635,6 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGray2Color">
-            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
