--- a/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/ChattingScreen.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/ChattingScreen.storyboard
@@ -17,6 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="GroupCell" rowHeight="70" id="kw9-Bs-xQq" customClass="ChatGroupTableViewCell" customModule="DormitoryForDelivery" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="44.5" width="414" height="70"/>
@@ -89,6 +90,7 @@
                                         <constraint firstItem="j3x-gd-6CX" firstAttribute="leading" secondItem="4E7-mf-0jd" secondAttribute="leading" constant="15" id="w8T-sD-64k"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <connections>
                                     <outlet property="currentNumber" destination="Owf-ED-ixL" id="dtF-fK-iCB"/>
                                     <outlet property="groupTitleLabel" destination="dWH-Ig-zPZ" id="Dtp-Dp-Mn1"/>
