--- a/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/HomeScreen.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/HomeScreen.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -17,6 +18,7 @@
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="3Oa-mR-81o">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <sections>
                             <tableViewSection id="g6s-Xu-Lu0">
                                 <cells>
@@ -40,6 +42,7 @@
                                                 <constraint firstAttribute="trailing" secondItem="nGI-Ce-Q7a" secondAttribute="trailing" constant="20" id="t92-hC-bDx"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="yfc-hv-JZ6" detailTextLabel="wkY-mg-gTW" rowHeight="63" style="IBUITableViewCellStyleValue1" id="CEZ-Yd-ciL">
                                         <rect key="frame" x="0.0" y="107.5" width="414" height="63"/>
@@ -104,11 +107,13 @@
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Aut-3Y-kNF">
-                                                            <rect key="frame" x="354" y="2" width="20" height="16.5"/>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Aut-3Y-kNF">
+                                                            <rect key="frame" x="354" y="-1.5" width="20" height="22.5"/>
+                                                            <color key="tintColor" red="0.54129213089999995" green="0.63199943300000005" blue="0.82895785570000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="20" id="YWX-oX-CAm"/>
                                                             </constraints>
+                                                            <imageReference key="image" image="chevron.right" catalog="system" symbolScale="large"/>
                                                         </imageView>
                                                     </subviews>
                                                     <constraints>
@@ -153,6 +158,7 @@
                                                         </label>
                                                         <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="4e1-B7-zIz">
                                                             <rect key="frame" x="280" y="0.0" width="94" height="32"/>
+                                                            <color key="tintColor" systemColor="labelColor"/>
                                                             <connections>
                                                                 <action selector="stepperValueChanged:" destination="aJw-Fh-W1C" eventType="valueChanged" id="DQj-99-ixh"/>
                                                             </connections>
@@ -303,7 +309,7 @@
         <scene sceneID="1lF-tx-cac">
             <objects>
                 <tableViewController storyboardIdentifier="PostTableViewController" id="6yC-lX-URx" customClass="PostTableViewController" customModule="DormitoryForDelivery" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" pagingEnabled="YES" dataMode="static" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="P2h-It-ITs">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" pagingEnabled="YES" dataMode="static" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="P2h-It-ITs">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <sections>
@@ -317,7 +323,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="치킨 시켜 먹을사람" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Ox-t6-wur" userLabel="TItleLabel">
-                                                    <rect key="frame" x="20" y="41" width="374" height="30"/>
+                                                    <rect key="frame" x="20" y="85" width="374" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="30" id="Uub-wP-GbF"/>
                                                     </constraints>
@@ -326,7 +332,7 @@
                                                     <color key="highlightedColor" systemColor="labelColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이태영" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u0c-DX-G1q" userLabel="writerNameLabel">
-                                                    <rect key="frame" x="20" y="96" width="55" height="20.5"/>
+                                                    <rect key="frame" x="20" y="140" width="55" height="20.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="55" id="4vr-4D-fQb"/>
                                                     </constraints>
@@ -335,7 +341,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2016011660" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DA0-XO-j08" userLabel="MeetingTimeLabel">
-                                                    <rect key="frame" x="80" y="96" width="225" height="20.5"/>
+                                                    <rect key="frame" x="80" y="140" width="225" height="20.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="195" id="Yk2-m9-AQK"/>
                                                     </constraints>
@@ -344,7 +350,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="orC-ao-Ab3">
-                                                    <rect key="frame" x="20" y="152.5" width="374" height="136.5"/>
+                                                    <rect key="frame" x="20" y="196.5" width="374" height="92.5"/>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                     <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                     <color key="textColor" systemColor="labelColor"/>
@@ -1013,6 +1019,7 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FJr-zE-cYj">
                                 <rect key="frame" x="0.0" y="263" width="414" height="633"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="65" id="brW-ws-uL8" customClass="MainTableViewCell" customModule="DormitoryForDelivery" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="44.5" width="414" height="65"/>
